# definite

./: .gitignore  AUTHORS  LICENSE  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
docs/: conf.py  index.rst
docs/api/: constants.rst  exceptions.rst  fsm.rst  module.rst
docs/usage/: advanced.rst  installation.rst  tutorial.rst
src/definite/: __init__.py  constants.py  fsm.py
src/definitely/: __init__.py  constants.py  exceptions.py  fsm.py
tests/: test_fsm.py  test_module.py  test_readme.py
