[metadata]
name = definite
version = 1.0.0
author = Daniel Lindsley
author_email = daniel@toastdriven.com
description = Simple finite state machines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/toastdriven/definite
project_urls =
    Bug Tracker = https://github.com/toastdriven/definite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3-Clause
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[wheel]
universal = 1
